--- a/original_template/css/style-green.css
+++ b/original_template/css/style-green.css
@@ -1,3 +1,14 @@
+/*
+  Theme Name: DevFolio
+  Theme URL: https://bootstrapmade.com/devfolio-bootstrap-portfolio-html-template/
+  Author: BootstrapMade.com
+  License: https://bootstrapmade.com/license/
+*/
+
+/*======================================
+//--//-->   STYLES GENERALES
+======================================*/
+
 body {
   background-color: #f5f5f5;
   color: #4e4e4e;
@@ -18,7 +29,7 @@ a {
 }
 
 a:hover {
-  color: #0078ff;
+  color: #24b67e;
   text-decoration: none;
   transition: all 0.5s ease-in-out;
 }
@@ -28,7 +39,7 @@ a:hover {
 }
 
 .color-a {
-  color: #0078ff;
+  color: #24b67e;
 }
 
 .color-d {
@@ -41,15 +52,15 @@ a:hover {
 
 .box-shadow,
 .paralax-mf,
-.links-box,
+.service-box,
 .work-box,
-.card-announcements {
+.card-blog {
   box-shadow: 0 13px 8px -10px rgba(0, 0, 0, 0.1);
 }
 
 .box-shadow-a,
 .button:hover {
-  box-shadow: 0 0 0 4px #cde1f8;
+  box-shadow: 0 0 0 4px #bbf5df;
 }
 
 .display-5 {
@@ -79,7 +90,7 @@ a:hover {
 }
 
 .overlay-mf {
-  background-color: #0078ff;
+  background-color: #24b67e;
 }
 
 .overlay-mf {
@@ -149,7 +160,7 @@ a:hover {
 .line-mf {
   width: 40px;
   height: 5px;
-  background-color: #0078ff;
+  background-color: #24b67e;
   margin: 0 auto;
 }
 
@@ -168,7 +179,7 @@ a:hover {
   content: '';
   position: absolute;
   height: 3px;
-  background-color: #0078ff;
+  background-color: #24b67e;
   width: 100px;
   bottom: -12px;
 }
@@ -205,14 +216,14 @@ a:hover {
   border-radius: 50%;
   line-height: 1.4;
   margin: 0 15px 0 0;
-  box-shadow: 0 0 0 3px #0078ff;
+  box-shadow: 0 0 0 3px #24b67e;
   transition: all 500ms ease;
 }
 
 .socials .ico-circle:hover {
-  background-color: #0078ff;
+  background-color: #24b67e;
   color: #fff;
-  box-shadow: 0 0 0 3px #cde1f8;
+  box-shadow: 0 0 0 3px #bbf5df;
   transition: all 500ms ease;
 }
 
@@ -221,7 +232,7 @@ a:hover {
 .ul-resect,
 .socials ul,
 .list-ico,
-.announcements-wrapper .post-meta ul,
+.blog-wrapper .post-meta ul,
 .box-comments .list-comments,
 .widget-sidebar .list-sidebar,
 .widget-tags ul {
@@ -235,7 +246,7 @@ a:hover {
 }
 
 .list-ico span {
-  color: #0078ff;
+  color: #24b67e;
   margin-right: 10px;
 }
 
@@ -249,7 +260,7 @@ a:hover {
   line-height: 1.55;
   margin: 0 auto;
   text-align: center;
-  box-shadow: 0 0 0 10px #0078ff;
+  box-shadow: 0 0 0 10px #24b67e;
   display: block;
 }
 
@@ -268,15 +279,15 @@ a:hover {
   width: 18px;
   height: 7px;
   margin: 5px 5px;
-  background: #cde1f8;
-  border: 0px solid #cde1f8;
+  background: #bbf5df;
+  border: 0px solid #bbf5df;
   display: block;
   transition: all 0.6s ease-in-out;
   cursor: pointer;
 }
 
 .owl-theme .owl-dots .owl-dot:hover span {
-  background-color: #cde1f8;
+  background-color: #bbf5df;
 }
 
 .owl-theme .owl-dots .owl-dot.active span {
@@ -296,7 +307,7 @@ a:hover {
   position: fixed;
   width: 42px;
   height: 42px;
-  background-color: #0078ff;
+  background-color: #24b67e;
   opacity: .7;
   font-size: 1.6rem;
   line-height: 1.5;
@@ -315,7 +326,7 @@ a:hover {
 .back-to-top {
   position: fixed;
   display: none;
-  background: #0078ff;
+  background: #24b67e;
   color: #fff;
   width: 44px;
   height: 44px;
@@ -353,7 +364,7 @@ a:hover {
   top: calc(50% - 30px);
   left: calc(50% - 30px);
   border: 6px solid #f2f2f2;
-  border-top: 6px solid #0078ff;
+  border-top: 6px solid #24b67e;
   border-radius: 50%;
   width: 60px;
   height: 60px;
@@ -470,26 +481,26 @@ a:hover {
 }
 
 .navbar-b.navbar-reduce .nav-link {
-  color: #0078ff;
+  color: #24b67e;
 }
 
 .navbar-b.navbar-reduce .nav-link:before {
-  background-color: #0078ff;
+  background-color: #24b67e;
 }
 
 .navbar-b.navbar-reduce .nav-link:hover {
-  color: #0078ff;
+  color: #24b67e;
 }
 
 .navbar-b.navbar-reduce .show > .nav-link,
 .navbar-b.navbar-reduce .active > .nav-link,
 .navbar-b.navbar-reduce .nav-link.show,
 .navbar-b.navbar-reduce .nav-link.active {
-  color: #0078ff;
+  color: #24b67e;
 }
 
 .navbar-b.navbar-reduce .navbar-brand {
-  color: #0078ff;
+  color: #24b67e;
 }
 
 .navbar-b.navbar-reduce .navbar-toggler span {
@@ -497,11 +508,9 @@ a:hover {
 }
 
 .navbar-b .navbar-brand {
-  color: rgb(176, 81, 243);
-  font-size: 2rem;
-  font-weight: 900;
-
-  /* font-family: 'whisper'; */
+  color: #fff;
+  font-size: 1.6rem;
+  font-weight: 600;
 }
 
 .navbar-b .navbar-nav .dropdown-item.show .dropdown-menu,
@@ -523,13 +532,13 @@ a:hover {
 }
 
 .navbar-b .dropdown-menu .dropdown-item:hover {
-  background-color: #0078ff;
+  background-color: #24b67e;
   color: #fff;
   transition: all 500ms ease;
 }
 
 .navbar-b .dropdown-menu .dropdown-item.active {
-  background-color: #0078ff;
+  background-color: #24b67e;
 }
 
 /*--/ Hamburger Navbar /--*/
@@ -643,15 +652,15 @@ a:hover {
 
 .intro-single .breadcrumb {
   background-color: transparent;
-  color: #0078ff;
+  color: #24b67e;
 }
 
 .intro-single .breadcrumb .breadcrumb-item:before {
-  color: #cde1f8;
+  color: #bbf5df;
 }
 
 .intro-single .breadcrumb .breadcrumb-item.active {
-  color: #cde1f8;
+  color: #bbf5df;
 }
 
 .intro-single .breadcrumb a {
@@ -680,7 +689,7 @@ a:hover {
 }
 
 .skill-mf .progress {
-  background-color: #cde1f8;
+  background-color: #bbf5df;
   margin: .5rem 0 1.2rem 0;
   border-radius: 0;
   height: .7rem;
@@ -688,45 +697,45 @@ a:hover {
 
 .skill-mf .progress .progress-bar {
   height: .7rem;
-  background-color: #0078ff;
+  background-color: #24b67e;
 }
 
 /*======================================
 //--//-->   SERVICES
 ======================================*/
 
-.links-box {
+.service-box {
   background-color: #fff;
   padding: 2.5rem 1.3rem;
   border-radius: 1rem;
   margin-bottom: 3rem;
 }
 
-.links-box:hover .ico-circle {
+.service-box:hover .ico-circle {
   transition: all 500ms ease;
   color: #fff;
-  background-color: #0078ff;
-  box-shadow: 0 0 0 10px #cde1f8;
+  background-color: #24b67e;
+  box-shadow: 0 0 0 10px #bbf5df;
 }
 
-.links-box .links-ico {
+.service-box .service-ico {
   margin-bottom: 1rem;
   color: #1e1e1e;
 }
 
-.links-box .ico-circle {
+.service-box .ico-circle {
   transition: all 500ms ease;
   font-size: 4rem;
 }
 
-.links-box .s-title {
+.service-box .s-title {
   font-size: 1.4rem;
   text-transform: uppercase;
   text-align: center;
   padding: .4rem 0;
 }
 
-.links-box .s-description {
+.service-box .s-description {
   color: #4e4e4e;
 }
 
@@ -747,7 +756,7 @@ a:hover {
   height: 60px;
   width: 60px;
   line-height: 1.8;
-  box-shadow: 0 0 0 10px #cde1f8;
+  box-shadow: 0 0 0 10px #bbf5df;
 }
 
 .counter-num .counter {
@@ -790,17 +799,17 @@ a:hover {
 }
 
 .work-content .w-more .w-ctegory {
-  color: #0078ff;
+  color: #24b67e;
 }
 
 .work-content .w-like {
   font-size: 2.5rem;
-  color: #0078ff;
+  color: #24b67e;
   float: right;
 }
 
 .work-content .w-like a {
-  color: #0078ff;
+  color: #24b67e;
 }
 
 .work-content .w-like .num-like {
@@ -843,7 +852,7 @@ a:hover {
 
 .testimonial-box .comit {
   font-size: 2rem;
-  color: #0078ff;
+  color: #24b67e;
   background-color: #fff;
   width: 52px;
   height: 52px;
@@ -857,11 +866,11 @@ a:hover {
 //--//-->   BLOG
 ======================================*/
 
-.card-announcements .card-body {
+.card-blog .card-body {
   position: relative;
 }
 
-.card-announcements .card-category-box {
+.card-blog .card-category-box {
   position: absolute;
   text-align: center;
   top: -16px;
@@ -871,16 +880,16 @@ a:hover {
   overflow: hidden;
 }
 
-.card-announcements .card-category {
+.card-blog .card-category {
   display: inline-block;
   color: #fff;
   padding: 0 15px 5px;
   overflow: hidden;
-  background-color: #0078ff;
+  background-color: #24b67e;
   border-radius: 4px;
 }
 
-.card-announcements .card-category .category {
+.card-blog .card-category .category {
   color: #fff;
   display: inline-block;
   text-transform: uppercase;
@@ -889,20 +898,20 @@ a:hover {
   margin-bottom: 0;
 }
 
-.card-announcements .card-title {
+.card-blog .card-title {
   font-size: 1.3rem;
   margin-top: .6rem;
 }
 
-.card-announcements .card-description {
+.card-blog .card-description {
   color: #4e4e4e;
 }
 
-.card-announcements .post-author {
+.card-blog .post-author {
   display: inline-block;
 }
 
-.card-announcements .post-date {
+.card-blog .post-date {
   color: #4e4e4e;
   display: inline-block;
   float: right;
@@ -921,34 +930,34 @@ a:hover {
   margin-bottom: 3rem;
 }
 
-.announcements-wrapper .article-title {
+.blog-wrapper .article-title {
   font-size: 1.5rem;
 }
 
-.announcements-wrapper .post-meta {
+.blog-wrapper .post-meta {
   margin: 1rem 0;
 }
 
-.announcements-wrapper .post-meta ul {
-  border-left: 4px solid #0078ff;
+.blog-wrapper .post-meta ul {
+  border-left: 4px solid #24b67e;
   margin-top: 1rem;
 }
 
-.announcements-wrapper .post-meta ul li {
+.blog-wrapper .post-meta ul li {
   display: inline-block;
   margin-left: 15px;
 }
 
-.announcements-wrapper .post-meta ul a {
-  color: #0078ff;
+.blog-wrapper .post-meta ul a {
+  color: #24b67e;
 }
 
-.announcements-wrapper .post-meta ul span {
+.blog-wrapper .post-meta ul span {
   color: #1e1e1e;
 }
 
-.announcements-wrapper .blockquote {
-  border-left: 4px solid #0078ff;
+.blog-wrapper .blockquote {
+  border-left: 4px solid #24b67e;
   padding: 18px;
   font-style: italic;
 }
@@ -980,7 +989,7 @@ a:hover {
 }
 
 .box-comments .list-comments a {
-  color: #0078ff;
+  color: #24b67e;
 }
 
 .box-comments .list-comments span {
@@ -997,7 +1006,7 @@ a:hover {
 .widget-sidebar .sidebar-title {
   font-size: 1.6rem;
   font-weight: 600;
-  border-left: 5px solid #0078ff;
+  border-left: 5px solid #24b67e;
   padding-left: 15px;
   text-transform: uppercase;
   margin-bottom: 1.5rem;
@@ -1014,7 +1023,7 @@ a:hover {
   width: 10px;
   height: 1px;
   left: 0;
-  background-color: #0078ff;
+  background-color: #24b67e;
   top: 20px;
 }
 
@@ -1025,8 +1034,8 @@ a:hover {
 }
 
 .sidebar-search .btn-search {
-  background-color: #0078ff;
-  border-color: #0078ff;
+  background-color: #24b67e;
+  border-color: #24b67e;
   border-radius: 0;
   padding-left: 20px;
   padding-right: 20px;
@@ -1034,7 +1043,7 @@ a:hover {
 
 .widget-tags ul li {
   display: inline-block;
-  background-color: #0078ff;
+  background-color: #24b67e;
   padding: .2rem .6rem;
   margin-bottom: .5rem;
   border-radius: 15px;
@@ -1083,8 +1092,8 @@ footer .credits a {
 ======================================*/
 
 #sendmessage {
-  color: #0078ff;
-  border: 1px solid #0078ff;
+  color: #24b67e;
+  border: 1px solid #24b67e;
   display: none;
   text-align: center;
   padding: 15px;
@@ -1141,15 +1150,15 @@ footer .credits a {
 }
 
 .button:hover {
-  background-color: #0062d3;
+  background-color: #0d9963;
   color: #fff;
   transition: all 500ms ease;
 }
 
 .button-a {
-  background-color: #0078ff;
+  background-color: #24b67e;
   color: #fff;
-  border-color: #cde1f8;
+  border-color: #bbf5df;
 }
 
 .button-big {
@@ -1157,7 +1166,7 @@ footer .credits a {
   font-size: 1.2rem;
 }
 
-.button-rounded {
+.button-rouded {
   border-radius: 5rem;
 }
 
@@ -1180,7 +1189,7 @@ footer .credits a {
     padding-left: 0rem;
   }
 
-  .card-announcements {
+  .card-blog {
     margin-bottom: 3rem;
   }
 
@@ -1228,7 +1237,7 @@ footer .credits a {
     padding: 3rem;
   }
 
-  .announcements-wrapper .article-title {
+  .blog-wrapper .article-title {
     font-size: 1.9rem;
   }
 
