--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,10 @@ body {
   overflow-x: hidden;
 }
 
-.links-box *, .card *, .socials *, #contact * {
+.links-box *,
+.card *,
+.socials *,
+#contact * {
   overflow-x: visible !important;
 }
 
@@ -281,7 +284,8 @@ a:hover {
 
 /*------/ Ico Circle /------*/
 
-.ico-circle, .ico-circle-disabled {
+.ico-circle,
+.ico-circle-disabled {
   height: 100px;
   width: 100px;
   font-size: 2rem;
@@ -384,21 +388,16 @@ a:hover {
   bottom: 0;
   z-index: 9999;
   overflow: hidden;
-  background: #fff;
+  background: #8400ff;
+  height: 100vh;
+  width: 100%;
+  text-align: center;
+  padding-top: 20vh;
 }
 
-#preloader:before {
-  content: "";
-  position: fixed;
-  top: calc(50% - 30px);
-  left: calc(50% - 30px);
-  border: 6px solid #f2f2f2;
-  border-top: 6px solid #8400ff;
-  border-radius: 50%;
-  width: 60px;
-  height: 60px;
-  -webkit-animation: animate-preloader 1s linear infinite;
-  animation: animate-preloader 1s linear infinite;
+#preloader img {
+ max-height: 230px;
+ max-width: 230px;
 }
 
 @-webkit-keyframes animate-preloader {
